add html and css files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="sidebar">
+      <div class="logo">
+        <img src="images/view-dashboard.png" alt="icon" /><span>Dashboard</span>
+      </div>
+
+      <div class="nav1">
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="images/home.png" alt="" /><span>Home</span></a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/card-account-details.png" alt="" /><span
+                >Profile</span
+              >
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="images/message.png" alt="" /><span>Messages</span></a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="images/history.png" alt="" /><span>History</span></a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="images/calendar-check.png" alt="" /><span
+                >Tasks</span
+              ></a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/account-group.png" alt="" /><span
+                >Communities</span
+              >
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="nav2">
+        <ul>
+          <li>
+            <a href=""
+              ><img src="images/cog-outline.png" alt="" /><span
+                >Settings</span
+              ></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="images/face-agent.png" alt="" /><span>Support</span></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="images/shield-check.png" alt="" /><span
+                >Privacy</span
+              ></a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <header class="grid-item">
+
+        
+
+
+
+    </header>
+
+    <main class="grid-item"></main>
+  </body>
 </html>
