Full design of admin dashboard

--- a/index.html
+++ b/index.html
@@ -81,13 +81,199 @@
     </div>
 
     <header class="grid-item">
+      <form action="#" method="get">
+        <div class="scope"><img src="images/magnify.png" alt="" /></div>
+        <input type="search" id="site-search" name="q" />
+      </form>
 
-        
+      <div class="login">
+        <a href="#"><img src="images/bell-ring-outline.png" alt="" /></a>
+        <a href="#">
+          <img src="images/profile_pic_1.png" alt="" />
+          <span>Morgan Okakley</span>
+        </a>
+      </div>
 
+      <div class="user-info">
+        <img class="profile-pic" src="images/profile_pic_1.png" alt="" />
+        <div>
+          <p class="greeting">Hi there,</p>
+          <p class="user-name">Morgan Oakley (@morgan)</p>
+        </div>
+      </div>
 
-
+      <div class="links">
+        <a class="btn" href="#">New</a>
+        <a class="btn" href="#">Upload</a>
+        <a class="btn" href="#">Share</a>
+      </div>
     </header>
 
-    <main class="grid-item"></main>
+    <main class="grid-item">
+      <div class="projects">
+        <h3>Your Projects</h3>
+        <div class="grid-container">
+          <div class="box">
+            <h4>Super Cool Project</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              illo consectetur reiciendis quod rem explicabo ea asperiores.
+              Minus, vitae incidunt. Explicabo ea illo fugiat nihil, odit
+              aperiam temporibus blanditiis corrupti.
+            </p>
+
+            <div class="icons">
+              <img src="images/bookmark-plus-outline.png" alt="" />
+              <img src="images/eye-plus-outline.png" alt="" />
+              <img src="images/share-variant-outline.png" alt="" />
+            </div>
+          </div>
+
+          <div class="box">
+            <h4>Less Cool Project</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+              consequatur! lorem100
+            </p>
+            <div class="icons">
+              <img src="images/bookmark-plus-outline.png" alt="" />
+              <img src="images/eye-plus-outline.png" alt="" />
+              <img src="images/share-variant-outline.png" alt="" />
+            </div>
+          </div>
+
+          <div class="box">
+            <h4>Impossible App</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto obcaecati ad sint accusamus id modi nobis ullam placeat
+              dolorum quo.
+            </p>
+            <div class="icons">
+              <img src="images/bookmark-plus-outline.png" alt="" />
+              <img src="images/eye-plus-outline.png" alt="" />
+              <img src="images/share-variant-outline.png" alt="" />
+            </div>
+          </div>
+
+          <div class="box">
+            <h4>Easy Peasy App</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+              nostrum quis quidem repellendus corporis, quasi ea! Vel aperiam
+              suscipit nulla magnam quibusdam a aliquam, odio illo minima quod
+              perspiciatis quam praesentium explicabo exercitationem fugiat.
+              Placeat nulla temporibus consequuntur reiciendis ab!
+            </p>
+            <div class="icons">
+              <img src="images/bookmark-plus-outline.png" alt="" />
+              <img src="images/eye-plus-outline.png" alt="" />
+              <img src="images/share-variant-outline.png" alt="" />
+            </div>
+          </div>
+
+          <div class="box">
+            <h4>Ad Blocker</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+              molestiae ea quo provident voluptatem laboriosam consectetur
+              commodi natus? Itaque, tempore!
+            </p>
+            <div class="icons">
+              <img src="images/bookmark-plus-outline.png" alt="" />
+              <img src="images/eye-plus-outline.png" alt="" />
+              <img src="images/share-variant-outline.png" alt="" />
+            </div>
+          </div>
+
+          <div class="box">
+            <h4>Money Maker</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium, temporibus.
+            </p>
+            <div class="icons">
+              <img src="images/bookmark-plus-outline.png" alt="" />
+              <img src="images/eye-plus-outline.png" alt="" />
+              <img src="images/share-variant-outline.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="right-bar">
+        <div class="top-box">
+          <h3>Announcements</h3>
+          <div class="box1">
+            <div>
+              <h5>Site Maintenance</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                voluptates delectus veniam deserunt?...
+              </p>
+            </div>
+            <div>
+              <h5>Community Share Day</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                voluptates delectus veniam deserunt?...
+              </p>
+            </div>
+            <div>
+              <h5>Updated Privacy Policy</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                voluptates delectus veniam deserunt?...
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="bottom-box">
+          <h3>Trending</h3>
+          <div class="box2">
+            <div class="trending">
+              <div class="trending-prof-pic">
+                <img src="images/user-avatar.jpg" alt="" />
+              </div>
+              <div class="trending_users">
+                <p>@fiona</p>
+                <p>World Peace Builder</p>
+              </div>
+            </div>
+
+            <div class="trending">
+              <div class="trending-prof-pic">
+                <img src="images/useravatar2.png" alt="" />
+              </div>
+              <div class="trending_users">
+                <p>@tegan</p>
+                <p>Super Cool Project</p>
+              </div>
+            </div>
+
+            <div class="trending">
+              <div class="trending-prof-pic">
+                <img src="images/useravatar3.png" alt="" />
+              </div>
+              <div class="trending_users">
+                <p>@robot</p>
+                <p>Life Changing App</p>
+              </div>
+            </div>
+
+            <div class="trending">
+              <div class="trending-prof-pic">
+                <img src="images/useravatar4.jpeg" alt="" />
+              </div>
+              <div class="trending_users">
+                <p>@alex</p>
+                <p>No Traffic Maker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
